fix: 修复安全漏洞 (#1004)
修复认证系统的 xss 漏洞和 /api/auth 的 host 头攻击漏洞

--- a/apps/gateway/assets/nginx.conf
+++ b/apps/gateway/assets/nginx.conf
@@ -1,5 +1,7 @@
 server {
 
+  server_name ${ALLOWED_SERVER_NAME};
+
   resolver ${RESOLVER} valid=10s;
   resolver_timeout 5s;
 
@@ -60,3 +62,5 @@ server {
 
   ${EXTRA}
 }
+
+${DEFAULT_SERVER_BLOCK}
