fix: 修复安全漏洞 (#1004)
修复认证系统的 xss 漏洞和 /api/auth 的 host 头攻击漏洞

--- a/apps/cli/assets/install.yaml
+++ b/apps/cli/assets/install.yaml
@@ -152,6 +152,9 @@
 #             include includes/headers;
 #             include includes/websocket;
 #          }
+#   # 允许访问的域名或 IP，多个域名或 IP 间用空格隔开
+#   # 默认接受所有域名和 IP,"_" 即表示接受所有域名和 IP
+#   allowedServerName: "_"
 
 # 插件配置
 # plugins:
